--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,15 +5,32 @@ on:
     branches:
       - main # default branch
 
+# 工作流
 jobs:
-  deploy:
-    runs-on: ubuntu-18.04
+  build-and-deploy:
+    runs-on: ubuntu-latest # 运行环境
+
     steps:
-      - uses: actions/checkout@v2
-      - run: npm install
-      - run: npm run build
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      # 拉代码
+      - name: Checkout code
+        uses: actions/checkout@v1
+
+      # 下载node，我这里指定了15.x，这个版本可随意，高于dumi规定的node版本即可
+      - name: Use Node.js
+        uses: actions/setup-node@v1
         with:
-          github_token: ${{ secrets.GH_TOKEN }}
-          publish_dir: ./dist
+          node-version: ^18.20.4
+
+      # 打包代码
+      - name: Build Project
+        run: |
+          npm install
+          npm run build
+
+      # 部署到github
+      - name: Deploy to Github
+        uses: JamesIves/github-pages-deploy-action@4.0.0
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+          branch: build # 打包的内容放到build分支下
+          folder: dist
